# OOP

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
include/: palindrom.h
includes/: Octal.hpp
src/: Octal.cpp  palindrom.cpp
tests/: Tests.cpp
